[qjh] feat: header html-content and style

--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="zh-Hans">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Resume</title>
-</head>
-<body>
-  <script src="src/app.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Resume</title>
+  </head>
+  <body>
+    <header class="header">
+      <img
+        class="avatar"
+        src="https://i.dlpng.com/static/png/6681915_preview.png"
+      />
+      <p class="greetings-title">HELLO,</p>
+      <section>
+        <p>MY NAME IS &nbsp;</p>
+        <p id="user-name"></p>
+        <p id="user-age">&nbsp;</p>
+        <p>YO AND THIS IS MY RESUME/CV</p>
+      </section>
+    </header>
+    <script src="src/app.js"></script>
+  </body>
 </html>
