[qjh] feat: main html-content and style

--- a/index.html
+++ b/index.html
@@ -24,5 +24,41 @@
       </section>
     </header>
     <script src="src/app.js"></script>
+    <main class="main">
+      <p class="about-me-title">ABOUT ME</p>
+      <p id="description">
+        woshi shjfhkjashfkjsa ahkjashfkjas fashkjashfkjjsa fjaskhfkjas
+      </p>
+      <p class="education-title">EDUCATION</p>
+      <ul id="education-list">
+        <li>
+          <p>
+            2017
+          </p>
+          <section>
+            <p>
+              biye jiangxiligong
+            </p>
+            <p>
+              xxuexichengjihenhaoxxxxxxxxxxxxxxxx
+            </p>
+          </section>
+        </li>
+
+        <li>
+          <p>
+            2020
+          </p>
+          <section>
+            <p>
+              biyeyu gdut
+            </p>
+            <p>
+              yanjiushengbiyexxxxxxxxxxxx
+            </p>
+          </section>
+        </li>
+      </ul>
+    </main>
   </body>
 </html>
