[qjh] feat: 在后端拿到数据之后更新 header ，测试getUserBasicInformation方法(resolve 和 reject 两种情况)

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
   </head>
   <body>
     <header class="header">
-      <img
-        class="avatar"
-        src="https://i.dlpng.com/static/png/6681915_preview.png"
-      />
+      <img id="user-avatar" src="" />
       <p class="greetings-title">HELLO,</p>
       <section>
         <p>MY NAME IS &nbsp;</p>
@@ -30,35 +27,6 @@
         woshi shjfhkjashfkjsa ahkjashfkjas fashkjashfkjjsa fjaskhfkjas
       </p>
       <p class="education-title">EDUCATION</p>
-      <ul id="education-list">
-        <li>
-          <p>
-            2017
-          </p>
-          <section>
-            <p>
-              biye jiangxiligong
-            </p>
-            <p>
-              xxuexichengjihenhaoxxxxxxxxxxxxxxxx
-            </p>
-          </section>
-        </li>
-
-        <li>
-          <p>
-            2020
-          </p>
-          <section>
-            <p>
-              biyeyu gdut
-            </p>
-            <p>
-              yanjiushengbiyexxxxxxxxxxxx
-            </p>
-          </section>
-        </li>
-      </ul>
     </main>
   </body>
 </html>
