[qjh] feat: 在后端拿到数据之后更新 main ，测试getUserEducationInformation方法(resolve 和 reject 两种情况)

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
     <main class="main">
       <p class="about-me-title">ABOUT ME</p>
       <p id="description">
-        woshi shjfhkjashfkjsa ahkjashfkjas fashkjashfkjjsa fjaskhfkjas
+        ---
       </p>
       <p class="education-title">EDUCATION</p>
+      <ul id="education-list"></ul>
     </main>
   </body>
 </html>
