feedback from Du Juan

--- a/index.html
+++ b/index.html
@@ -14,16 +14,20 @@
       <img id="user-avatar" src="" />
       <p class="greetings-title">HELLO,</p>
       <section>
+        <!--        // TODO feedback: 使用p标签不够恰当-->
         <p>MY NAME IS &nbsp;</p>
         <p id="user-name"></p>
         <p id="user-age">&nbsp;</p>
         <p>YO AND THIS IS MY RESUME/CV</p>
       </section>
     </header>
+    <!--    // TODO feedback: script不应该出现在body内容中间-->
     <script src="src/app.js"></script>
     <main class="main">
+      <!--      // TODO feedback: 既然是title是否h*标签更合适呢？-->
       <p class="about-me-title">ABOUT ME</p>
       <p id="description">
+        <!--        // TODO feedback: ---是做什么用呢-->
         ---
       </p>
       <p class="education-title">EDUCATION</p>
